<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textColor="#FF3978FC"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textViewNoLogueadoLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/hola_para_seguir_ingresa_tu_e_mail_o_usuario"
            android:textColor="@color/colorTextoOscuro"
            android:textSize="20sp"
            android:visibility="visible" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:elevation="3dp"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linearLayoutIniciarSesionFragmentLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/editTextEmailFragmentLogin"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="#FF3978FC"
                    android:hint="@string/email"
                    android:textColor="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    android:textSize="20sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPasswordFragmentLogin"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FF3978FC"
                        android:hint="@string/contrase_a"
                        android:inputType="textPassword"
                        android:textColor="@color/colorTextoOscuro"
                        android:textColorHint="@color/colorTextoOscuro"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/buttonIngresarFragmentLogin"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="#3978FC"
                    android:text="@string/ingresar"
                    android:textColor="@color/colorTextoBlanco" />

                <TextView
                    android:id="@+id/buttonRegistrarFragmentLogin"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/Registrarse"
                    android:textColor="#FF3978FC" />


                <!-- <com.facebook.login.widget.LoginButton
                     android:id="@+id/login_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|center"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="30dp"
                     android:visibility="gone" />

                 <com.google.android.gms.common.SignInButton
                     android:id="@+id/sign_in_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:visibility="gone" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRegistroLogin"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:elevation="3dp"
            android:visibility="gone"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <!-- <com.airbnb.lottie.LottieAnimationView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     app:lottie_autoPlay="true"
                     android:layout_gravity="center"
                     app:lottie_fileName="down.json"
                     app:lottie_imageAssetsFolder="assets"/>-->


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#FF3978FC"
                    android:text="@string/ingrese_sus_datos_para_completar_el_registro"
                    android:textColor="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextUserNameFragmentLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#FF3978FC"
                    android:hint="Nombre de usuario"
                    android:textColor="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextNombreFragmentLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#FF3978FC"
                    android:hint="@string/nombre"
                    android:textColor="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextApellidoFragmentLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#FF3978FC"
                    android:hint="@string/apellido"
                    android:textColor="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextEdadFragmentLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#FF3978FC"
                    android:hint="@string/edad"
                    android:inputType="number"
                    android:textColor="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/buttonEnviarFragmentLogin"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="#3978FC"
                    android:text="@string/Crear_cuenta"
                    android:textColor="@color/colorTextoBlanco" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>
