<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.DetailsFragment">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/lottieCarga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003"
        app:lottie_autoPlay="true"
        app:lottie_fileName="bag.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF3978FC"
            android:src="@drawable/ic_location_on_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/imageViewPager"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.05" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/imageViewPager"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@id/cardViewDetailsTitle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/imageViewLikeDetails"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="331dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="187dp"
            android:backgroundTint="@color/colorTextoBlanco"
            android:src="@drawable/unlike24dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorFondoGris"
            android:elevation="3dp"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/imageViewPager">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewTituloDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingStart="10dp"
                    android:textColor="@color/colorTextoOscuro"
                    android:textSize="24sp"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textViewPrecioDetails"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="sans-serif-light"
                    android:paddingStart="10dp"
                    android:textColor="@color/colorTextoOscuro"
                    android:textSize="28sp"
                    app:layout_constraintTop_toBottomOf="@id/textViewTituloDetails" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/colorFondoBlanco"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetailsTitle">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="Descripción"
                    android:textColor="@color/colorTextoOscuro"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewDescripcionDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextoOscuro"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            app:cardBackgroundColor="@color/colorTextoBlanco"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDescription">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textViewCommentsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:text="@string/comentarios_sobre_el_producto"
                    android:textColor="@color/colorTextoOscuro"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPreguntaComentarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/comentario_pregunta"
                    android:textColor="#FF3978FC"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/recyclerComentarios" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerComentarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/textViewCommentsTitle" />

                <EditText
                    android:id="@+id/editTextComentarios"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/escribe_un_comentario_sobre_este_producto"
                    android:textSize="20sp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/textViewPreguntaComentarios" />

                <TextView
                    android:id="@+id/buttonEnviarComentarios"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#4664E4"
                    android:gravity="center"
                    android:text="enviar comentario"
                    android:textColor="@color/colorTextoBlanco"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextComentarios" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>